fix gaps in transcript styles

--- a/packages/veritone-react-common/src/components/TranscriptEngineOutput/SnippetSegment/styles.scss
+++ b/packages/veritone-react-common/src/components/TranscriptEngineOutput/SnippetSegment/styles.scss
@@ -3,10 +3,7 @@
 .transcriptSegment {
   width: 100%;
   height: 100%;
-
-  display: flex;
-  flex-flow: row nowrap;
-  overflow-wrap: break-word;
+  display: block;
 
   .time {
     padding: 20px 20px 20px 0;
