--- a/packages/veritone-react-common/src/components/TranscriptEngineOutput/SpeakerTranscriptContent/styles.scss
+++ b/packages/veritone-react-common/src/components/TranscriptEngineOutput/SpeakerTranscriptContent/styles.scss
@@ -19,7 +19,7 @@
     -o-user-select: none;
   }
 
-  .transcriptView:last-child {
+  .transcriptView {
     padding-bottom: 40px;
   }
 }
